<resources>
    <string name="app_name">PMDM Tarea 3</string>
    <string name="eliminar">Eliminar</string>
    <string name="eliminar_pokemon_capturados">Eliminar Pokémon capturados</string>
    <string name="cambiar_idioma">Cambiar idioma</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="acerca_de_la_app">Acerca de la App</string>
    <string name="cargando">Cargando...</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="login_google">Iniciar sesión con Google</string>
    <string name="mis_pokemons">Mis pokemons</string>
    <string name="ajustes">Ajustes</string>
    <string name="please_enter_both_fields">Por favor, ingresa ambos campos.</string>
    <string name="registration_successful">Registro exitoso</string>
    <string name="registration_failed">Error al registrar</string>
    <string name="login_failed">Error en el inicio de sesión.</string>
    <string name="welcome">Bienvenido</string>
    <string name="confirm_delete_pokemon_title">Confirmar eliminación de Pokémon capturados</string>
    <string name="confirm_delete_pokemon_message">¿Estás seguro de que quieres eliminar todos los Pokémon capturados?</string>
    <string name="confirm_logout_title">Confirmar cierre de sesión</string>
    <string name="confirm_logout_message">¿Estás seguro de que quieres cerrar sesión?</string>
    <string name="about_app_title">Acerca de la App</string>
    <string name="about_app_message">Aplicación de ejemplo de Pokedex.\nVersión 1.0\nDesarrollado por Javier Benítez García</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="accept">Aceptar</string>
    <string name="pokemon_deleted">Pokémon capturados eliminados</string>
    <string name="pokemon_delete_error">Error al eliminar los Pokémon capturados</string>
    <string name="logged_out">Has cerrado sesión.</string>
    <string name="error_loading_pokemons">Error al cargar los Pokémon</string>
    <string name="details_index">Índice: %1$d</string>
    <string name="details_types">Tipo(s): %1$s</string>
    <string name="details_weight">Peso: %1$.2f kg</string>
    <string name="details_height">Altura: %1$.2f m</string>
    <string name="pokemon_deleted_message">Pokémon %1$s eliminado</string>
    <string name="pokemon_delete_error_message">Error al eliminar el Pokémon</string>
    <string name="pokemon_captured_message">¡%1$s ha sido capturado!</string>
    <string name="pokemon_details_error">Error al cargar los detalles del Pokémon</string>
    <string name="pokemon_details_store_error">Error al almacenar los detalles del Pokémon</string>
</resources>