<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".ui.settings.SettingsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textDeleteCaptured"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/eliminar_pokemon_capturados"
        android:textColor="@color/black"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_idioma"
        android:padding="16dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/textDeleteCaptured"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_sesion"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAbout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/acerca_de_la_app"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"/>

</androidx.constraintlayout.widget.ConstraintLayout>